--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-pandas
-sqlalchemy
-psycopg2
-openai
-streamlit
-python-dotenv
-matplotlib
-seaborn
-scikit-learn
-plotly
-google-generativeai
-pytesseract
-psycopg2-binary
+pandas==2.3.0
+sqlalchemy==2.0.41
+psycopg2-binary==2.9.10
+openai==1.93.0
+streamlit==1.46.1
+python-dotenv==1.1.1
+matplotlib==3.10.3
+seaborn==0.13.2
+scikit-learn==1.7.0
+plotly==6.2.0
+google-generativeai==0.8.5
+pytesseract==0.3.13
